# number-general

./: Cargo.toml  README.md
src/: class.rs  destream.rs  hash.rs  instance.rs  lib.rs  serde.rs
