[package]
name = "number-general"
version = "0.5.0"
authors = ["haydn@tinychain.net"]
edition = "2018"
description = "A generic number type for Rust which supports basic math and (de)serialization."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/haydnv/number-general.git"

categories = ["data-structures", "mathematics"]
keywords = ["number", "complex", "float", "integer", "unsigned"]

[features]
hash = ["async-hash", "sha2"]

[dependencies]
async-hash = { version = "0.2", optional = true }
async-trait = "0.1"
collate = ">=0.1.2"
destream = "0.5"
futures = "0.3"
num = "0.2"
safecast = "0.1"
serde = { version = "1.0", features = ["derive"] }
sha2 = { version = "0.10", optional = true }

[dev-dependencies]
bytes = "1.0"
destream_json = "0.8"
serde_json = "1.0"
