[package]
name = "number-general"
version = "0.10.1"
authors = ["code@tinychain.net"]
edition = "2021"
description = "A generic number type for Rust which supports basic math and (de)serialization."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/haydnv/number-general.git"

categories = ["data-structures", "mathematics"]
keywords = ["number", "complex", "float", "integer", "unsigned"]

[features]
hash = ["async-hash"]
stream = ["destream", "futures"]
all = ["hash", "serde", "stream"]

[dependencies]
async-hash = { path = "../async-hash", optional = true }
async-trait = "0.1"
collate = { path = "../collate" }
destream = { version = "0.7", optional = true }
futures = { version = "0.3", optional = true }
get-size = "0.1"
get-size-derive = "0.1"
num = "0.4"
safecast = "0.2"
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
bytes = "1.5"
serde_json = "1.0"
